<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:keepScreenOn="true"
    android:gravity="center_vertical"
    >

    <TextView
        android:text="@string/deadball"
        android:textSize="80sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtPlayClock"
        android:padding="30dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        >
        <TextView
            android:layout_toLeftOf="@+id/txtSemicolon"
            android:layout_centerVertical="true"
            android:text="@string/minutes"
            android:textSize="100sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtGameClockMinutes"
            />
        <TextView
            android:layout_centerInParent="true"
            android:text="@string/time_separator"
            android:textSize="100sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtSemicolon"
            />

        <TextView
            android:layout_toRightOf="@+id/txtSemicolon"
            android:layout_centerVertical="true"
            android:text="@string/seconds"
            android:textSize="100sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtGameClockSeconds"
            />
        <TextView
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/txtGameClockMinutes"
            android:layout_marginTop="30dp"
            android:text="@string/stop"
            android:textSize="40sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblStop"
            />
    </RelativeLayout>



</LinearLayout>