<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    >
    <TextView
        android:layout_toLeftOf="@+id/txtSemicolon"
        android:layout_centerVertical="true"
        android:text="@string/minutes"
        android:textSize="150sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtGameClockMinutes"
        android:paddingBottom="40dp"
        android:paddingLeft="60dp"
        android:paddingTop="40dp"
        />
    <TextView
        android:layout_centerInParent="true"
        android:text="@string/time_separator"
        android:textSize="150sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtSemicolon"
        />
    <TextView
        android:layout_toRightOf="@+id/txtSemicolon"
        android:layout_centerVertical="true"
        android:text="@string/seconds"
        android:textSize="150sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtGameClockSeconds"
        android:paddingBottom="40dp"
        android:paddingRight="60dp"
        android:paddingTop="40dp"
        />
</RelativeLayout>